# vector_anchor

./: .gitignore  LICENSE  README.md  anchor.cmd  install.ps1  package-lock.json  package.json  start-anchor.bat  start-anchor.vbs  tsconfig.json
.agents/: instructions.md
.agents/workflows/: anchor-health.md
anchor-core/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json  test.js
anchor-core/src/: index.rs  lib.rs  math.rs  storage.rs  types.rs
docs/: CONTEXT_FOLD_PLAN.md  Vector Anchor (向量锚点) 项目策划书.md
src/: chunker-router.ts  chunker-tree.ts  chunker.ts  cli.ts  embedding.ts  engine.ts  fold.ts  index.ts  model.ts  pipeline.ts  server.ts  tools.ts  utils.ts
