[package]
name = "anchor-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16", default-features = false, features = ["napi6", "async", "serde-json"] }
napi-derive = "2.16"
usearch = "=2.16.0"
nalgebra = "0.32"
rusqlite = { version = "0.31", features = ["bundled"] }
hashbrown = "0.14"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
parking_lot = "0.12"
sha2 = "0.10"

[build-dependencies]
napi-build = "2.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
